--- a/css/tournament.css
+++ b/css/tournament.css
@@ -1,28 +1,41 @@
-*{
-    letter-spacing: 0px;
+#tournamentPage { 
+    color: #F47521;
 }
 
 .lastTournament {
     width: 100%;
     height: 400px;
     margin-top: 70px;
-    padding: 20px 85px;
+    padding: 20px 60px;
     display: flex;
     justify-content: center;
+    letter-spacing: 1px !important;
 }
 
 .lastTournamentPhoto { 
-    background-color: red;
     height: 330px;
-    width: 420px;
+    width: 320px;
     margin-right: 50px;
+    border-radius: 7px;
+}
+
+.lastTournamentPhoto img { 
+    width: 100%;
+    height: 100%;
     border-radius: 7px;
 }
 
 .lastTournamentDetail { 
     padding: 20px 0px;
-    width: 500px;
+    width: 800px;
     height: 330px;
+    z-index: 100;
+}
+
+#division { 
+    font-weight: 500;
+    color: #F47521;
+    margin-bottom: 10px;
 }
 
 .lastTournamentDetail h1 {
@@ -43,8 +56,14 @@
 
 .lasttournament-detail-info{
     margin-top: 20px;
-    width: 500px;
+    width: 100%;
     height: 100px;
+    display: flex;
+    justify-content: space-between;
+    overflow-x: auto;
+}
+
+.profileContainer { 
     display: flex;
 }
 
@@ -52,9 +71,14 @@
     height: 70px;
     width: 70px;
     border-radius: 50%;
-    background-color: blue;
     margin-right: 15px;
     margin-top: 10px;
+}
+
+.playerProfile img { 
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
 }
 
 .location-info {
@@ -68,7 +92,11 @@
 }
 
 .tournament-info { 
-    margin-right: 100px;
+    margin-right: 0px;
+}
+
+.tournament-score{
+    margin: 0px 20px;
 }
 
 .tournament-score p{
@@ -104,7 +132,7 @@
     color: white;
 }
 /* tournament list */
-.tournamentList {
+.tournamentList { 
     position: relative; 
     width: 100%;
     background-color: white;
@@ -118,7 +146,7 @@
     text-decoration-line: underline; 
     text-decoration-color: #F47521; 
     text-decoration-thickness: 5px; 
-    text-underline-offset: 8px; 
+    text-underline-offset: 9px; 
     font-size: 27px; 
     color: black;
     font-weight: 500;
@@ -132,6 +160,7 @@
     display: flex;
     overflow-x: auto;
     align-items: center;
+    justify-content: center;
 }
 
 
@@ -171,6 +200,10 @@
     margin-top: 10px;
 }
 
+.newsBtn p{ 
+    color: #F47521;
+}
+
 .newsBtn button { 
     width: 170px;
     font-size: 0.8rem;
@@ -198,4 +231,69 @@
     border-radius: 5px;
     text-align: center;
     font-size: 0.7rem;
+}
+
+@media only screen and (max-width: 1095px){
+
+    .tournamentContainer {
+        justify-content: left;
+    }
+
+    .lastTournament {
+        color: white;
+    }
+
+    .lastTournamentPhoto {
+        position: absolute;
+        top: 0;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .lastTournamentDetail {
+        margin: 0;
+        padding-left: 25px;
+    }
+    .lasttournament-detail-info { 
+        font-size: 0.8rem;
+    }
+}
+
+@media only screen and (max-width: 960px){
+    .lastTournamentDetail {
+        height: 370px;
+        margin-top: -40px;
+    }
+
+    #tournamentPage { 
+        color: white;
+    }
+}
+
+@media only screen and (max-width: 641px){
+    .lasttournament-detail-info { 
+        font-size: 0.6rem;
+    }
+}
+
+@media only screen and (max-width: 500px){
+
+    .lastTournament { 
+        padding: 0;
+    }
+
+    .lastTournamentDetail { 
+        width: 500px;
+        height: 330px;
+        overflow-x: auto;
+    }
+    
+    .lastTournamentDetail h1 {
+        font-size: 1rem;
+    }
+    
+    .tournament-score p{
+        font-size: 0.7rem
+    }
 }
